--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bukharim96/ress",
+  "name": "ressheet",
   "version": "1.1.1",
   "description": "A prop-based LESS-like StyleSheet for React Components",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bukharim96/ress.git"
+    "url": "git+https://github.com/bukharim96/ressheet.git"
   },
   "keywords": [
     "react",
@@ -21,7 +21,7 @@
   "author": "bukharim96",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bukharim96/ress/issues"
+    "url": "https://github.com/bukharim96/ressheet/issues"
   },
-  "homepage": "https://github.com/bukharim96/ress#readme"
+  "homepage": "https://github.com/bukharim96/ressheet#readme"
 }
